--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {},
   "scripts": {
