--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "react-dom": "^16.0.0",
     "webpack": "^3.8.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0"
+  },
   "scripts": {
     "start": "nodemon server/index.js",
     "heroku-postbuild": "webpack -d",
