--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
